Fix scroll snap bug on mobile iOS
Made a temporary fix for a scroll snap bug on mobile iOS (+ possibly
Andriod) browsers, by disabling scroll snapping for viewports under
1024px.

--- a/css/layout.css
+++ b/css/layout.css
@@ -16,9 +16,10 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-snap-type: y mandatory;
-    scroll-snap-stop: always;
+@media screen and (min-width:1024px) {
+    html {
+        scroll-snap-type: y mandatory;
+    }
 }
 
 /* GLOBAL GRIDS */
@@ -39,6 +40,7 @@ html {
     height: 100vh;
     width: 100vw;
     gap: 2vw;
+    overflow: hidden;
     scroll-snap-align: start;
 }
 
